manifests/prd/victoria-metrics/CiliumNetworkPolicy-victoria-metrics-sync-job.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: victoria-metrics-sync-job
  namespace: monitoring
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: victoria-metrics-k8s-stack
